added astropi banner

--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,4 +1,4 @@
-title: code-for-your-Astro-Pi-Mission-Space-Lab-experiment
+title: Code your Astro Pi Mission Space Lab experiment
 hero_image: images/banner.png
 description: code-for-your-Astro-Pi-Mission-Space-Lab-experiment description
 version: 4
