--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,4 +1,4 @@
-title: Code your Astro Pi Mission Space Lab experiment
+title: Astro Pi Mission Space Lab experiment Phase 2 guide
 hero_image: images/banner.png
 description: code-for-your-Astro-Pi-Mission-Space-Lab-experiment description
 version: 4
@@ -18,3 +18,4 @@ steps:
   - title: Networking
   - title: User input
   - title: A big worked example
+  - title: Test your code
