Updated and shortened intro, added list of installed python libs with links to docs

--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,4 +1,4 @@
-title: Astro Pi Mission Space Lab experiment Phase 2 guide
+title: Astro Pi Mission Space Lab Phase 2 guide
 hero_image: images/banner.png
 description: code-for-your-Astro-Pi-Mission-Space-Lab-experiment description
 version: 4
