--- a/en/meta.yml
+++ b/en/meta.yml
@@ -12,7 +12,7 @@ steps:
   - title: Working out where the ISS is
   - title: Recording images using the camera
   - title: Doing more than one thing at a time
-  - title: Running your code for its allocated 3 hours
+  - title: Running your code for its allocated 3h
   - title: Using the LED matrix
   - title: Networking
   - title: User input
