--- a/en/meta.yml
+++ b/en/meta.yml
@@ -18,4 +18,4 @@ steps:
   - title: User input
   - title: A big worked example
   - title: Test your code
-  - title: Tips for Educators
+  - title: Tips for educators
