--- a/en/meta.yml
+++ b/en/meta.yml
@@ -2,8 +2,8 @@ title: Astro Pi Mission Space Lab Phase 2 guide
 hero_image: images/banner.png
 description: code-for-your-Astro-Pi-Mission-Space-Lab-experiment description
 version: 4
-listed: false
-copyedit: false
+listed: true
+copyedit: true
 last_tested: "2018-06-29"
 steps:
   - title: Introduction
