--- a/en/meta.yml
+++ b/en/meta.yml
@@ -13,7 +13,7 @@ steps:
   - title: Recording images using the camera
   - title: Doing more than one thing at a time
   - title: Running your experiment for 3 hours
-  - title: Using the LED matrix
+  - title: Using the LED display
   - title: Networking and System processes
   - title: User input
   - title: A big worked example
