Add initial draft of python libs and flight os

--- a/en/meta.yml
+++ b/en/meta.yml
@@ -19,3 +19,5 @@ steps:
   - title: A big worked example
   - title: Test your code
   - title: Tips for educators
+  - title: Python libraries
+  - title: Test your code on the Flight OS
