Update python libraries

--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,6 +1,6 @@
 title: Astro Pi Mission Space Lab Phase 2 guide
 hero_image: images/banner.png
-description: code-for-your-Astro-Pi-Mission-Space-Lab-experiment description
+description: Guide for participants of the Mission Space Lab Astro Pi competition 2018-19
 version: 4
 listed: true
 copyedit: true
