--- a/en/meta.yml
+++ b/en/meta.yml
@@ -15,6 +15,6 @@ steps:
   - title: Running your experiment for 3 hours
   - title: Using the LED display (Life in Space)
   - title: Networking and system processes
-  - title: User input
+  - title: Common Mistakes
   - title: A big worked example
   - title: Test your code
