--- a/en/meta.yml
+++ b/en/meta.yml
@@ -8,6 +8,7 @@ last_tested: "2018-06-29"
 steps:
   - title: Introduction
   - title: Getting started
+  - title: Writing your program
   - title: Recording data from your experiment
   - title: Finding the location of the ISS
   - title: Recording images using the camera
