--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,6 +1,6 @@
 title: Astro Pi Mission Space Lab Phase 2 guide
 hero_image: images/banner.png
-description: Guide for participants of the Mission Space Lab Astro Pi competition 2019-20
+description: Guide for participants of the Mission Space Lab Astro Pi competition 2021-22
 version: 4
 listed: true
 copyedit: true
@@ -19,3 +19,4 @@ steps:
   - title: Common mistakes
   - title: A big worked example
   - title: Test your code
+  - title: Retrieving sensor data
