A fresh effort at "Recording data from your experiment"

--- a/en/meta.yml
+++ b/en/meta.yml
@@ -19,4 +19,4 @@ steps:
   - title: Common mistakes
   - title: A big worked example
   - title: Test your code
-  - title: Retrieving sensor data
+  - title: Recording data from your experiment
