Adding completion flags to meta yaml

--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,21 +1,27 @@
+---
 title: Astro Pi Mission Space Lab Phase 2 guide
 hero_image: images/banner.png
-description: Guide for participants of the Mission Space Lab Astro Pi competition 2021-22
+description: Guide for participants of the Mission Space Lab Astro Pi competition
+  2021-22
 version: 2022.1
 listed: true
 copyedit: true
-last_tested: "2021-06-23"
+last_tested: '2021-06-23'
 steps:
-  - title: Introduction
-  - title: Getting started
-  - title: Writing your program
-  - title: Recording data from your experiment
-  - title: Finding the location of the ISS
-  - title: Recording images using the camera
-  - title: Doing more than one thing at a time
-  - title: Running your experiment for 3 hours
-  - title: ('Life in space' only) Using the LED display
-  - title: Networking and system processes
-  - title: Common mistakes
-  - title: A big worked example
-  - title: Test your code
+- title: Introduction
+- title: Getting started
+- title: Writing your program
+  completion:
+  - engaged
+- title: Recording data from your experiment
+- title: Finding the location of the ISS
+- title: Recording images using the camera
+- title: Doing more than one thing at a time
+- title: Running your experiment for 3 hours
+- title: "('Life in space' only) Using the LED display"
+- title: Networking and system processes
+- title: Common mistakes
+- title: A big worked example
+  completion:
+  - internal
+- title: Test your code
