--- a/en/meta.yml
+++ b/en/meta.yml
@@ -2,14 +2,16 @@
 title: Astro Pi Mission Space Lab Phase 2 guide
 hero_image: images/banner.png
 description: Guide for participants of the Mission Space Lab Astro Pi competition
-  2021-22
-version: 2022.1
+  2022-23
+version: 2023.1
 listed: true
 copyedit: true
 last_tested: '2021-06-23'
 steps:
 - title: Introduction
-- title: Getting started
+- title: Kit Assembly
+- title: The Kit OS
+- title: Planning your work
 - title: Writing your program
   completion:
   - engaged
