--- a/en/meta.yml
+++ b/en/meta.yml
@@ -10,9 +10,9 @@ last_tested: '2021-06-23'
 steps:
 - title: Introduction
 - title: Kit Assembly
-- title: The Kit OS
-  completion:
-  - engaged
+  #- title: The Kit OS
+  #  completion:
+  #  - engaged
   #- title: Planning your work
   #- title: How to run your experiment for 3 hours
   #- title: How to record data from your experiment
