--- a/en/meta.yml
+++ b/en/meta.yml
@@ -11,10 +11,8 @@ steps:
 - title: Introduction
 - title: Kit Assembly
 - title: The Kit OS
-  #  completion:
-  #  - engaged
-  #- title: Planning your work
-  #- title: How to run your experiment for 3 hours
+- title: Planning your work
+- title: How to run your experiment for 3 hours
   #- title: How to record data from your experiment
   #- title: How to find the location of the ISS
   #- title: How to record images using the camera
