--- a/en/meta.yml
+++ b/en/meta.yml
@@ -13,15 +13,18 @@ steps:
 - title: The Kit OS
 - title: Planning your work
 - title: How to run your experiment for 3 hours
-  #- title: How to record data from your experiment
-  #- title: How to find the location of the ISS
+- title: How to record data and images
   #- title: How to record images using the camera
-  #- title: Doing more than one thing at a time
-  #- title: "('Life in space' only) Using the LED display"
-  #- title: Networking and system processes
-  #- title: Machine Learning with the Coral dongle
-  #- title: Common mistakes
-  #- title: A big worked example
+  #- title: How to find the location of the ISS
+#- title: Machine Learning with the Coral dongle
+#- title: Common mistakes
+#- title: Testing and checking your work
+  #- testing
+  #- title: Meeting the requirements
+    #- title: "('Life in space' only) Using the LED display"
+    #- title: Doing more than one thing at a time
+    #- title: Networking and system processes
+#- title: A big worked example
   #  completion:
   #  - internal
-  #- title: Test your code
+#-Resources
