--- a/en/meta.yml
+++ b/en/meta.yml
@@ -15,7 +15,7 @@ steps:
 - title: Writing your program - how to record data and images
 - title: Writing your program - how to run your experiment for 3 hours
 - title: Writing your program - how to find the location of the ISS
-#- title: Machine Learning with the Coral dongle
+- title: Writing your program - machine Learning with the Coral dongle
 #- title: Common mistakes
 #- title: Testing and checking your work
   #- testing
