--- a/en/meta.yml
+++ b/en/meta.yml
@@ -12,11 +12,11 @@ steps:
 - title: Kit Assembly
 - title: The Kit OS
 - title: Planning your work
-- title: Writing your program - How to record data and images
-- title: Writing your program - How to run your experiment for 3 hours
-- title: Writing your program - How to find the location of the ISS
-- title: Writing your program - Machine Learning with the Coral dongle
-- title: Writing your program - Error handling
+- title: How to record data and images
+- title: Running your experiment for 3 hours
+- title: How to find the location of the ISS
+- title: Machine learning & computer vision
+- title: Bulletproofing your program
 - title: Testing and checking your work
-- title: A big worked example
+- title: A worked example
 - title: Resources
