--- a/en/meta.yml
+++ b/en/meta.yml
@@ -18,5 +18,5 @@ steps:
 - title: Machine learning & computer vision
 - title: Bulletproofing your program
 - title: Testing and checking your work
-- title: A worked example
+- title: A complete worked example
 - title: Resources
