Update in review

--- a/en/meta.yml
+++ b/en/meta.yml
@@ -13,7 +13,7 @@ steps:
 - title: The Kit OS
 - title: Planning your work
 - title: How to record data and images
-- title: Running your experiment for 3 hours
+- title: Running an experiment for 3 hours
 - title: How to find the location of the ISS
 - title: Machine learning & computer vision
 - title: Bulletproofing your program
