--- a/en/meta.yml
+++ b/en/meta.yml
@@ -15,8 +15,8 @@ steps:
 - title: How to record data and images
 - title: Running an experiment for 3 hours
 - title: How to find the location of the ISS
-- title: Machine learning & computer vision
-- title: Bulletproofing your program
+- title: Computer vision and machine learning 
+- title: Preparing for the unexpected
 - title: Testing and checking your work
 - title: A complete worked example
 - title: Resources
