--- a/en/meta.yml
+++ b/en/meta.yml
@@ -4,7 +4,7 @@ hero_image: images/banner.png
 description: Guide for participants of the Mission Space Lab Astro Pi competition
   2022-23
 version: 2023.1
-listed: true
+listed: false
 copyedit: true
 last_tested: '2021-06-23'
 steps:
